logs/op_pointnet2__ext_furthest_point_sampling/run_20/summary.txt
=== Op Pipeline Round 20 Summary ===
Operator: pointnet2__ext_furthest_point_sampling
Time: 2026-07-06 16:32:16

--- build.log (tail 20) ---
[ 58%] Generating scripts/install.sh, scripts/upgrade.sh
[ 75%] Built target cust_optiling
[ 75%] Built target gen_version_info
/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/autogen /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/tbe/op_info_cfg/ai_core
[ 75%] Built target optiling_compat
[ 75%] Built target modify_vendor
[INFO] Succed generated /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/tbe/op_info_cfg/ai_core/npu_supported_ops.json
[ 75%] Built target npu_supported_ops
/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/autogen/aclnn_furthest_point_sampling.cpp:54:41: error: ‘socSupportInfo0’ was not declared in this scope; did you mean ‘OpSocSupportInfo’?
   54 | OpSocSupportInfo opSocSupportList[1] = {socSupportInfo0};
      |                                         ^~~~~~~~~~~~~~~
      |                                         OpSocSupportInfo
gmake[2]: *** [op_host/CMakeFiles/cust_opapi.dir/build.make:76：op_host/CMakeFiles/cust_opapi.dir/__/autogen/aclnn_furthest_point_sampling.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:294：op_host/CMakeFiles/cust_opapi.dir/all] 错误 2
gmake[1]: *** 正在等待未完成的任务....
[ 83%] Linking CXX shared library libcust_tf_parsers.so
[ 83%] Built target cust_tf_parsers
[ 91%] Linking CXX shared library libcust_opsproto_rt2.0.so
[ 91%] Built target cust_op_proto
gmake: *** [Makefile:156：all] 错误 2

--- verify.log (tail 20) ---
========== 3. VERIFY: pointnet2__ext_furthest_point_sampling ==========
[WARN] 未找到 AclNNInvocation 目录: /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/AclNNInvocation，跳过验证步骤。

--- test.log (tail 30) ---
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/latest owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/8.3.RC1/x86_64-linux/ascend_toolkit_install.info owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/latest owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/8.3.RC1/x86_64-linux/ascend_toolkit_install.info owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
=== FPS Operator Test ===
  Compiled + loaded OK
  B=  1 N= 128 M= 32: RuntimeError: The Inner error is reported as above. The process exits for this inner error, and the current working operator name is F
  B=  1 N= 512 M= 64: FAIL mismatch=64/64
  B=  2 N= 256 M= 48: FAIL mismatch=96/96
  B=  4 N= 128 M= 16: FAIL mismatch=64/64
  B=  1 N=1024 M=128: FAIL mismatch=128/128
  B=  2 N= 500 M=100: FAIL mismatch=200/200
  B=  4 N= 200 M= 50: FAIL mismatch=200/200
  B=  1 N=  64 M=  8: FAIL mismatch=8/8
  B=  8 N= 100 M= 20: FAIL mismatch=160/160
  B=  3 N= 300 M=150: FAIL mismatch=450/450

  Result: 0/10 passed
FAILED

--- status ---
BUILD_FAILED
BUILD_ERROR: .run 包未生成
VERIFY_OK
INSTALL_FAILED
TEST_ERROR
